--- a/composer.json
+++ b/composer.json
@@ -8,11 +8,13 @@
     "require": {
         "php": "^8.2",
         "laravel/framework": "^12.0",
+        "laravel/telescope": "^5.7",
         "laravel/tinker": "^2.10.1",
         "livewire/livewire": "^3.6",
         "secondnetwork/blade-tabler-icons": "^3.31"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.15",
         "fakerphp/faker": "^1.23",
         "laravel/pail": "^1.2.2",
         "laravel/pint": "^1.13",
