--- a/.github/workflows/pest.yml
+++ b/.github/workflows/pest.yml
@@ -1,9 +1,6 @@
-name: Tests
+name: Pest
 
-on:
-  push:
-    branches: [main]
-  pull_request:
+on: [push, pull_request]
 
 jobs:
   pest:
@@ -26,5 +23,16 @@ jobs:
       - name: Install dependencies
         run: composer install --no-progress --prefer-dist --optimize-autoloader
 
-      - name: Run Pest tests
+      - name: Set Laravel encryption key
+        run: php artisan key:generate
+
+      - name: Set directory permissions
+        run: chmod -R 777 storage bootstrap/cache
+
+      - name: Prepare SQLite database
+        run: |
+          mkdir -p database
+          touch database/database.sqlite
+
+      - name: Run Pest in parallel
         run: vendor/bin/pest --parallel
